@@ -11,6 +11,7 @@ commander
 	.option('-r, --drop', 'Drop and recreate the database before attempting to create objects')
 	.option('-i, --continue', 'Continue processing when an error occurs (by default, processing will stop)')
 	.option('-e, --schema [schema]', 'The default schema to use when creating objects (defaults to "public"). If "none" is specified, search_path will not be set')
+	.option('-a, --readconfig [config.js]', 'Reads the DBURI from the file provided (loaded as a node module and looking at the dburi export)')
 	.parse(process.argv);
 
 
@@ -21,7 +22,8 @@ var parse_connection_string = require('pg-connection-string').parse;
 
 var util = require('util');
 var path = require('path');
-var colors = require('colors');
+
+var pc = require(__dirname + '/print_colors.js');
 
 if (commander.args.length == 0)
 {
@@ -29,15 +31,23 @@ if (commander.args.length == 0)
 	process.exit(1);
 }
 
+if (commander.dburi && commander.readconfig)
+{
+	pc.print_err("You cannot set both --dburi and --readconfig settings");
+	commander.help();
+	process.exit(1);
+}
+
+if (commander.readconfig)
+{
+	// TODO load JSON as well
+	var config = require(commander.readconfig);
+	config.dburi = config.dburi;
+}
+
 if (!commander.schema)
 	commander.schema = 'public';
 
-var level = 0;
-
-function print_info (str) { console.error("  ".repeat(level) + colors.blue(str)); }
-function print_ok (str) { console.error("  ".repeat(level) + colors.green(str)); }
-function print_warn (str) { console.error("  ".repeat(level) + colors.yellow(str)); }
-function print_err (str) { console.error("  ".repeat(level) + colors.red(str)); }
 
 var sql_list = [];
 var sql_file_list = [];
@@ -46,14 +56,15 @@ var directory_list = [];
 
 function load_entry (f, source) 
 {
-	level++;
+	pc.level++;
 	try {
 		var realpath = fs.realpathSync(f);
 		var fstat = fs.statSync(realpath);
 	} catch (e) {
-		print_err('No such file: ' + f + ' (defined in ' + source + ')');
-		level--;
-		return;
+		pc.print_err('No such file: ' + f + ' (defined in ' + source + ')');
+		pc.level--;
+		if (!(commander['continue']))
+			return false;
 	}
 
 	if (fstat.isDirectory())
@@ -65,24 +76,27 @@ function load_entry (f, source)
 		var extname = path.extname(realpath);
 		if (extname == '.sql')
 		{
-			load_sqlfile(realpath);
+			if (load_sqlfile(realpath) == false)
+				return false;
 		}
 		else if (extname == '.manifest')
 		{
-			load_manifestfile(realpath);
+			if (load_manifestfile(realpath) == false)
+				return false;
 		}
 	}
 	else
 	{
 		console.error("Unknown type of file");
 	}
-	level--;
+	pc.level--;
+	return true;
 }
 
 
 function load_directory(dirname)
 {
-	print_info("Loading directory " + dirname);
+	pc.print_info("Loading directory " + dirname);
 	var dir_list = [];
 
 	var files = fs.readdirSync(dirname);
@@ -93,7 +107,8 @@ function load_directory(dirname)
 
 		if (fstat.isFile()) 
 		{
-			load_entry(filename, dirname);
+			if (load_entry(filename, dirname) == false)
+				return false;
 		}
 		else if (fstat.isDirectory()) 
 		{
@@ -111,12 +126,13 @@ function load_directory(dirname)
 		}
 	}
 
+	return true;
 }
 
 function load_sqlfile(filename)
 {
 	var parent_directory = path.dirname(filename);
-	print_info("Loading sql file " + filename);
+	pc.print_info("Loading sql file " + filename);
 
 	if (sql_file_list.indexOf(filename) >= 0)
 	{
@@ -134,9 +150,11 @@ function load_sqlfile(filename)
 		var include_filename = data.substring(idx + '-- Require:'.length, nlidx).trim();
 		var include_filepath = path.resolve(path.dirname(filename), include_filename);
 
-		level++;
-		load_entry(include_filepath, filename);
-		level--;
+		pc.level++;
+		if (load_entry(include_filepath, filename) == false)
+			return false;
+
+		pc.level--;
 	}
 
 	var new_data;
@@ -161,9 +179,10 @@ function load_sqlfile(filename)
 		var include_filename = data.substring(idx + '-- Post:'.length, nlidx).trim();
 		var include_filepath = path.resolve(path.dirname(filename), include_filename);
 
-		level++;
-		load_entry(include_filepath, filename);
-		level--;
+		pc.level++;
+		if (load_entry(include_filepath, filename) == false)
+			return false;
+		pc.level--;
 	}
 
 }
@@ -171,7 +190,7 @@ function load_sqlfile(filename)
 function load_manifestfile(filename)
 {
 	var parent_directory = path.dirname(filename);
-	print_info("Loading manifest file " + filename);
+	pc.print_info("Loading manifest file " + filename);
 	
 	var data = fs.readFileSync(filename, 'utf8');
 	var lines = data.split("\n");
@@ -184,7 +203,8 @@ function load_manifestfile(filename)
 		if (line.trim() != '')
 		{
 			var mfilename = path.resolve(parent_directory, line);
-			load_entry(mfilename, filename);
+			if (load_entry(mfilename, filename) == false)
+				return false;
 		}
 	});
 }
@@ -204,21 +224,21 @@ function create_database(superdburi, dburi, cb)
 	client.connect(function(err) {
 		if (err)
 		{
-			print_err("Error estabilishing connection" + (superdburi ? ' to ' + superdburi : '') + ": " + err.toString() + ' (' + err.code + ')');
+			pc.print_err("Error estabilishing connection" + (superdburi ? ' to ' + superdburi : '') + ": " + err.toString() + ' (' + err.code + ')');
 			process.exit(1);
 		}
 		else
 		{
 			if (!dburi)
 			{
-				print_err('If you want a database to be created (as specified by option -c, --create) you need to provide the database details using the --dburi, -d option');
+				pc.print_err('If you want a database to be created (as specified by option -c, --create) you need to provide the database details using the --dburi, -d option');
 				process.exit(1);
 			}
 
 			var obj = parse_connection_string(dburi);
 			if (!obj.database || !obj.user)
 			{
-				print_err('The database options you provided through the --dburi, -d option should specify a database name and user (which will be the owner of the new database), in the format pg://username:password@hostname/databasename');
+				pc.print_err('The database options you provided through the --dburi, -d option should specify a database name and user (which will be the owner of the new database), in the format pg://username:password@hostname/databasename');
 				process.exit(1);
 			}
 
@@ -226,7 +246,7 @@ function create_database(superdburi, dburi, cb)
 				function(err, res) {
 					if (err)
 					{
-						print_err("Error during database creation: " + err.toString() + ' (' + err.code + ')');
+						pc.print_err("Error during database creation: " + err.toString() + ' (' + err.code + ')');
 						process.exit(1);
 					}
 
@@ -254,21 +274,21 @@ function drop_database(superdburi, dburi, cb)
 	client.connect(function(err) {
 		if (err)
 		{
-			print_err("Error estabilishing connection" + (superdburi ? ' to ' + superdburi : '') + ": " + err.toString() + ' (' + err.code + ')');
+			pc.print_err("Error estabilishing connection" + (superdburi ? ' to ' + superdburi : '') + ": " + err.toString() + ' (' + err.code + ')');
 			process.exit(1);
 		}
 		else
 		{
 			if (!dburi)
 			{
-				print_err('If you want a database to be dropped (as specified by option -r, --drop) you need to provide the database details using the --dburi, -d option');
+				pc.print_err('If you want a database to be dropped (as specified by option -r, --drop) you need to provide the database details using the --dburi, -d option');
 				process.exit(1);
 			}
 
 			var obj = parse_connection_string(dburi);
 			if (!obj.database || !obj.user)
 			{
-				print_err('The database options you provided through the --dburi, -d option should specify a database name and user (which will be the owner of the new database), in the format pg://username:password@hostname/databasename');
+				pc.print_err('The database options you provided through the --dburi, -d option should specify a database name and user (which will be the owner of the new database), in the format pg://username:password@hostname/databasename');
 				process.exit(1);
 			}
 
@@ -276,7 +296,7 @@ function drop_database(superdburi, dburi, cb)
 				function(err, res) {
 					if (err)
 					{
-						print_err("Error during database drop: " + err.toString() + ' (' + err.code + ')');
+						pc.print_err("Error during database drop: " + err.toString() + ' (' + err.code + ')');
 						process.exit(1);
 					}
 
@@ -296,7 +316,7 @@ function create_objects()
 	var client = null;
 	if (commander.dburi)
 	{
-		print_info("Connecting to database...");
+		pc.print_info("Connecting to database...");
 		client = new pg.Client(commander.dburi);
 
 		client.connect(function(err) {
@@ -304,15 +324,15 @@ function create_objects()
 			if (err)
 			{
 				console.log();
-				print_err("Error connecting to " + commander.dburi + ": " + err.toString() + ' (' + err.code + ')');
+				pc.print_err("Error connecting to " + commander.dburi + ": " + err.toString() + ' (' + err.code + ')');
 				if (err.code == '3D000') // database "pinotage" does not exist
 				{
 					console.log();
-					print_warn('Please ensure your database settings are correct. You can create a database in the following ways:');
-					level++;
-					print_warn("* Use the createdb command (included in the postgres installation)");
-					print_warn("* Connect to the database and issue a 'CREATE DATABASE ' command");
-					print_warn("* Provide the -c, --create option to this program");
+					pc.print_warn('Please ensure your database settings are correct. You can create a database in the following ways:');
+					pc.level++;
+					pc.print_warn("* Use the createdb command (included in the postgres installation)");
+					pc.print_warn("* Connect to the database and issue a 'CREATE DATABASE ' command");
+					pc.print_warn("* Provide the -c, --create option to this program");
 					console.log();
 				}
 
@@ -321,7 +341,7 @@ function create_objects()
 			}
 			else
 			{
-				print_ok("Connected");
+				pc.print_ok("Connected");
 			}
 
 			next(null, null);
@@ -339,15 +359,15 @@ function create_objects()
 
 			if (commander['continue'])
 			{
-				level++;
-				print_warn(err);
-				level--;
+				pc.level++;
+				pc.print_warn(err);
+				pc.level--;
 			}
 			else
 			{
-				level++;
-				print_err(err);
-				level--;
+				pc.level++;
+				pc.print_err(err);
+				pc.level--;
 
 				client.end();
 				process.exit(1);
@@ -356,7 +376,7 @@ function create_objects()
 		}
 		if (sql_list.length <= 0)
 		{
-			print_info("DONE");
+			pc.print_info("DONE");
 
 			if (client)
 				client.end();
@@ -365,7 +385,7 @@ function create_objects()
 		{
 
 			var nextfile = sql_list.shift();
-			print_info("Creating " + nextfile.filename + " (" + nextfile.data.length + " bytes)");
+			pc.print_info("Creating " + nextfile.filename + " (" + nextfile.data.length + " bytes)");
 
 			if (client)
 			{
@@ -384,15 +404,22 @@ function create_objects()
 
 }
 
-print_info("Building list...");
+pc.print_info("Building list...");
 
-commander.args.forEach(function (f) {
-	load_entry(f, 'command line');
-});
+for (var i = 0; i < commander.args.length; i++) 
+{
+	var f = commander.args[i];
+	if (load_entry(f, 'command line') == false)
+	{
+		console.log("AAAA FAKSE");
+		sql_list = [];
+		break;
+	}
+}
 
 if (sql_list.length == 0)
 {
-	print_warn('No SQL files found');
+	pc.print_warn('No SQL files found');
 
 	process.exit(1);
 }
