@@ -186,4 +186,5 @@ Other:
 - Removed "publicPath" from app settings (in favour of "public_directories")
 - Notification subsystem
 - New tool to set up a database: grape-db-setup
+- User save will not change the password if it is not provided
 
